# learn

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  README.md  foo.cpp  foo.h  main.cpp  run.sh
.github/workflows/: build.yml
src/: CMakeLists.txt  glad.c  glad.h
src/glad/: glad.c  glad.h
